--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
             height: 787px;
             cursor: pointer;
             background: #fffffff1;
-            border: 0.15rem solid #949494eb;
+            border: 0.15rem solid rgba(176, 176, 176, 0.808);
             border-radius: 0.5rem;
             border-top-right-radius: 3rem;
             border-bottom-right-radius: 3rem;
@@ -582,7 +582,7 @@
             font-size: 9px;
             color: #838383;
             background: #fffffff1;
-            border: 0.15rem solid #949494eb;
+            border: 0.15rem solid rgba(176, 176, 176, 0.808);
             border-radius: 0.5rem;
             border-top-left-radius: 3rem;
             border-bottom-left-radius: 3rem;
@@ -647,7 +647,7 @@
             font-family: 'Poppins';
             font-size: 1.5rem;
             color: #808080;
-            border: 0.15rem solid #949494eb;
+            border: 0.15rem solid rgba(176, 176, 176, 0.808);
             border-radius: 0.5rem;
             background: #fffffff1;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -842,7 +842,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #949494eb;
+      border: 0.15rem solid rgba(176, 176, 176, 0.808);
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -870,7 +870,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #949494eb;
+      border: 0.15rem solid rgba(176, 176, 176, 0.808);
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -917,7 +917,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             height: 420px;
             padding: 20px;
             background: #fffffff1;
-            border: 0.15rem solid #949494eb;
+            border: 0.15rem solid rgba(176, 176, 176, 0.808);
             margin-top: 7px;
             border-radius: 0.5rem;
           }
@@ -1157,7 +1157,7 @@ cursor: pointer;
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #949494eb;
+      border: 0.15rem solid rgba(176, 176, 176, 0.808);
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -1209,7 +1209,7 @@ cursor: pointer;
             background: #fffffff1;
             padding: 10px;
             margin-top: -1px;
-            border: 0.15rem solid #949494eb;
+            border: 0.15rem solid rgba(176, 176, 176, 0.808);
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             border-radius: 0.5rem;
           }
@@ -1282,7 +1282,7 @@ font-size: 14px;
   padding: 10px;
   background: #fffffff1;
   margin-top: 5.5rem;
-  border: 0.15rem solid #949494eb;
+  border: 0.15rem solid rgba(176, 176, 176, 0.808);
   box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             border-radius: 0.5rem;
             cursor: pointer;
@@ -1389,7 +1389,7 @@ font-size: 20px;
       align-items: center;
       width: 84.04%;
       height: 100px;
-      border: 0.15rem solid #949494eb;
+      border: 0.15rem solid rgba(176, 176, 176, 0.808);
       color: #8e8e8e;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -1433,7 +1433,7 @@ font-size: 20px;
             width: 86.37%;
             height: 460px;
             background: #fffffff1;
-            border: 0.15rem solid #949494eb;
+            border: 0.15rem solid rgba(176, 176, 176, 0.808);
             border-radius: 0.5rem;
             margin-top: 9px;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
