--- a/index.html
+++ b/index.html
@@ -1511,8 +1511,8 @@ font-size: 14px;
   
     }
     ::-webkit-scrollbar-thumb{
-        background: -webkit-linear-gradient(#242424ec 50%, rgba(255, 217, 2, 0.979) 50%);
-        background: -moz-linear-gradient(#242424ec 50%, rgba(255, 217, 2, 0.979) 50%);
+        background: -webkit-linear-gradient(rgb(69, 188, 228) 50%, rgb(255, 1, 1) 50%);
+        background: -moz-linear-gradient(rgb(69, 188, 228) 50%, rgb(255, 1, 1) 50%);
     }
     ::-webkit-scrollbar-track-piece:hover{
         background: rgba(250, 250, 250, 0.937);
