--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                  top: 0;
                  position: sticky;
                  border-top: 0.12rem solid #2b2a2ac7;
-                 border-bottom: 0.4rem solid rgba(8, 106, 235, 0.69);
+                 border-bottom: 0.43rem solid rgba(0, 91, 209, 0.64);
           }
           
           .myDiv{
@@ -1511,8 +1511,8 @@ font-size: 14px;
   
     }
     ::-webkit-scrollbar-thumb{
-        background: -webkit-linear-gradient(rgb(69, 188, 228) 50%, rgb(255, 1, 1) 50%);
-        background: -moz-linear-gradient(rgb(69, 188, 228) 50%, rgb(255, 1, 1) 50%);
+        background: -webkit-linear-gradient(rgb(57, 193, 239) 50%, rgb(255, 1, 1) 50%);
+        background: -moz-linear-gradient(rgb(57, 193, 239) 50%, rgb(255, 1, 1) 50%);
     }
     ::-webkit-scrollbar-track-piece:hover{
         background: rgba(250, 250, 250, 0.937);
@@ -1750,7 +1750,7 @@ font-size: 14px;
     font-family: 'helvetica';
     font-size: 0.78rem;
     padding: 2px;
-    border: 0.2rem solid rgba(8, 106, 235, 0.69);
+    border: 0.2rem solid rgb(57, 193, 239);
     background: rgb(255, 1, 1);
     margin-top: -16px;
     margin-left: 1.1rem;
