--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: rgba(9, 109, 240, 0.668);
+                 background: rgba(11, 110, 241, 0.606);
                  width: 100%;
-                 height: 72px;
+                 height: 73px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
@@ -1744,15 +1744,15 @@ font-size: 14px;
     justify-content: center;
     align-items: center;
     width: 70px;
-    height: 65px;
+    height: 63px;
     border-radius: 50%;
     color: yellow;
     font-family: 'helvetica';
-    font-size: 0.78rem;
+    font-size: 0.79rem;
     padding: 2px;
-    border: 0.2rem solid rgb(57, 193, 239);
+    border: 0.4px solid #363636f3;
     background: rgb(255, 1, 1);
-    margin-top: -17px;
+    margin-top: -15px;
     margin-left: 1.1rem;
     cursor: pointer;
    }
