--- a/index.html
+++ b/index.html
@@ -1743,14 +1743,14 @@ font-size: 14px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 69.78px;
+    width: 69.79px;
     height: 63.8px;
     border-radius: 50%;
     color: yellow;
-    font-family: 'helvetica';
-    font-size: 0.78rem;
+    font-family: 'arial narrow';
+    font-size: 14.49px;
     padding: 2px;
-    border: 0.69px solid #2b2b2bc9;
+    border: 0.65px solid #232323e0;
     background: rgb(250, 3, 3);
     margin-top: -13.9px;
     margin-left: 1.1rem;
