--- a/index.html
+++ b/index.html
@@ -1788,7 +1788,7 @@ font-size: 14px;
     .top-container1{
     display: flex;
     position: relative;
-    background: rgba(9, 109, 240, 0.668);
+    background: #753649;
     width: 100%;
     height: 80px;
     justify-content: center;
@@ -2002,14 +2002,14 @@ font-size: 14px;
     height: 77px;
     align-items: center;
     justify-content: space-between;
-    margin-top: -71.5px;
+    margin-top: -69px;
 }
 .cover{
     display: flex;
     position: relative;
     width: 20%;
     height: 67px;
-    background: rgba(9, 109, 240, 0.668);
+    background: #753649;
     justify-content: center;
     align-items: center;
     border-right: 1px solid transparent; 
@@ -2021,7 +2021,7 @@ font-size: 14px;
     position: relative;
     width: 80%;
     height: 67px;
-    background: rgba(9, 109, 240, 0.668);
+    background: #753649;
     justify-content: center;
     align-items: center;
     border-left: 1px solid transparent;
