--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         font-family: 'georgia';
         font-size: 0.76rem;
         color: rgb(219, 166, 32);
-        background: #2c2c2cee;
+        background: #383838ee;
     }
 
     .Welcome{
@@ -142,14 +142,14 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: rgba(64, 149, 246, 0.739);
+                 background: rgba(63, 164, 252, 0.734);
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.43rem solid rgba(2, 95, 216, 0.635);
+                 border-bottom: 0.42rem solid rgba(0, 94, 195, 0.654);
           }
           
           .myDiv{
@@ -482,19 +482,24 @@
 
           .T-Area{
             display: grid;
-            grid-template-rows: 1fr 1fr 1fr;
-            row-gap: 0.85rem;
-            justify-content: space-around;
-            justify-items: center;
+            grid-template-rows: 1.5fr 1fr;
+            row-gap: 0.5rem;
+            justify-content: space-between;
+            align-items: center;
+            background: transparent;
+            padding: 27px;
             margin-top: 3rem;
             width: 100%;
             height: 787px;
-            cursor: pointer;
+            line-height: 16px;
+            font-family: 'georgia';
+            font-size: 9px;
+            color: #838383;
             background: #fffffff1;
             border: 0.15rem solid rgba(134, 35, 70, 0.928);
             border-radius: 0.5rem;
-            border-top-right-radius: 3rem;
-            border-bottom-right-radius: 3rem;
+            border-top-left-radius: 1rem;
+            cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 
@@ -510,7 +515,6 @@
             width: 101%;
             height: 470px;
             border-radius: 0.5rem;
-            margin-top: 2.25rem;
           }
           .CIP img{
             width: 101%;
@@ -583,8 +587,7 @@
             background: #fffffff1;
             border: 0.15rem solid rgba(134, 35, 70, 0.928);
             border-radius: 0.5rem;
-            border-top-left-radius: 3rem;
-            border-bottom-left-radius: 3rem;
+            border-top-right-radius: 1rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
