--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -1429,7 +1429,7 @@ font-size: 20px;
             justify-content: space-around;
             justify-items: center;
             padding: 10px;
-            width: 86.4%;
+            width: 86.7%;
             height: 460px;
             background: #fffffff1;
             border: 0.15rem solid rgba(134, 35, 70, 0.928);
