--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background-color: rgba(237, 237, 237, 0.986);
+        background-color: rgba(235, 235, 235, 0.986);
     }
 
     .content1{
@@ -1501,7 +1501,7 @@ font-size: 14px;
     
     }
     ::-webkit-scrollbar-track-piece{
-        background: #f5f5f5;
+        background: #fff;
         cursor: pointer;
   
     }
