--- a/index.html
+++ b/index.html
@@ -1531,9 +1531,33 @@ font-size: 14px;
             text-align: center; 
             padding: 10px;
         }
+
+        .F1{
+          display: grid;
+          grid-template-columns: 1fr 1fr;
+          justify-content: space-between;
+          justify-items: center;
+          width: 86%;
+          height: auto;
+          background: #9e0e40;
+          padding: 10px;
+          border-radius: 0.5rem;
+          border: 0.15rem solid #fc2b74f6;
+          font-size: 2.2rem;
+        }
 .footer1 img{
    width: 400px;
    height: 290px;
+}
+
+.F2{
+  display: grid;
+  grid-template-columns: 1fr;
+  font-family: 'Poppins';
+  font-size: 2.25rem;
+  line-height: 38px;
+  text-align: justify;
+  padding: 20px;
 }
 
 .footer2{
@@ -2566,9 +2590,15 @@ font-size: 14px;
         
             <div class="footer">
 
+              <div class="F1">
+
               <div class="footer1">
                 <img src="https://zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
               </div>
+              <div class="F2">
+                Mushrooms are part of special vegetals that are both poisonnous or/and comestible depending the kind of mushroom we are dealing with. Human-being has managed to introduce mushrooms into his culinary culure (art)
+            </div>
+          </div>
 
               <div class="footer2">
                 <br>
