--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -1524,8 +1524,8 @@ font-size: 14px;
             justify-items: center;
             row-gap: 0.5rem;
             font-family: 'Poppins';
-            font-size: 1.5rem;
-            line-height: 32px;
+            font-size: 1.25rem;
+            line-height: 30px;
             background: rgba(35, 35, 35, 0.966);
             color: #fff;  
             text-align: center; 
@@ -1541,7 +1541,7 @@ font-size: 14px;
           height: auto;
           background: #9e0e40;
           padding: 10px;
-          border-radius: 0.5rem;
+          border-radius: 0.15rem;
           border: 0.15rem solid #fc2b74f6;
           font-size: 2.2rem;
         }
