--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -1554,8 +1554,8 @@ font-size: 14px;
   display: grid;
   grid-template-columns: 1fr;
   font-family: 'Poppins';
-  font-size: 2.25rem;
-  line-height: 38px;
+  font-size: 2rem;
+  line-height: 36px;
   text-align: justify;
   padding: 20px;
 }
@@ -2596,7 +2596,7 @@ font-size: 14px;
                 <img src="https://zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
               </div>
               <div class="F2">
-                Mushrooms are part of special vegetals that are both poisonnous or/and comestible depending the kind of mushroom we are dealing with. Human-being has managed to introduce mushrooms into his culinary culure (art)
+                Mushrooms are part of special vegetals that are both poisonnous or/and comestible depending the kind of mushroom we are dealing with. Human-being has managed to introduce mushrooms into his culinary culure (art) making it less dangerous
             </div>
           </div>
 
