--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         column-gap: 0.25rem;
                  justify-content: space-around;
                  justify-items: center;
-                 background: rgba(244, 87, 142, 0.81);
+                 background: #af1047;
                  width: 100%;
                  height: 75px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.42rem solid rgba(0, 94, 195, 0.654);
+                 border-bottom: 0.42rem solid rgba(4, 125, 255, 0.867);
           }
           
           .myDiv{
@@ -1782,8 +1782,8 @@ font-size: 14px;
     font-family: 'arial narrow';
     font-size: 14.49px;
     padding: 2px;
-    border: 0.45px solid #0b053eb6;
-    background: #9e0e40;
+    border: 1.5px solid #40b6fffe;
+    background: rgb(251, 9, 9);
     margin-top: -13.9px;
     margin-left: 1.1rem;
     cursor: pointer;
@@ -2596,7 +2596,7 @@ font-size: 14px;
                 <img src="https://zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
               </div>
               <div class="F2">
-                Mushrooms are part of special vegetals that are both poisonnous or/and comestible depending the kind of mushroom we are dealing with. Human-being has managed to introduce mushrooms into his culinary culure (art) making it less dangerous
+                Mushrooms are part of special vegetals that are both comestible and poisonnous depending the kind of mushroom we are dealing with. Human-being has managed to introduce mushrooms into his culinary culure (art) making it less dangerous
             </div>
           </div>
 
