--- a/index.html
+++ b/index.html
@@ -1558,6 +1558,7 @@ font-size: 14px;
   line-height: 36px;
   text-align: justify;
   padding: 20px;
+  color: #fdfdfd;
 }
 
 .footer2{
@@ -1566,6 +1567,8 @@ font-size: 14px;
   justify-items: center;
   width: 100%;
   height: auto;
+  font-family: 'Poppins';
+  font-size: 16px;
 }
     .content a:hover{
         text-decoration: underline;
@@ -2596,7 +2599,7 @@ font-size: 14px;
                 <img src="https://zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
               </div>
               <div class="F2">
-                Mushrooms are part of special vegetals that are both comestible and poisonnous depending the kind of mushroom we are dealing with. Human-being has managed to introduce mushrooms into his culinary culure (art) making it less dangerous
+                Mushrooms are part of special plants that are both comestible and poisonous depending the kind of mushroom we are dealing with. But human-being has managed to introduce mushrooms into his culinary culure (art) making some of them as food and then useful
             </div>
           </div>
 
@@ -2606,7 +2609,6 @@ font-size: 14px;
                 <br>
                 <br> 
                 [Webmaster : GKC => | Disability Rights Advocate | Photography Passionate]
-                <br>
                 <br>
                 [DISABILITY IS NOT DESTINY = Le Handicap n'est pas une Fatalité]
               </div>
