--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             font-size: 9px;
             color: #838383;
             background: #fffffff1;
-            border: 0.15rem solid #af1047;
+            border: 0.15rem solid #f1d4de;
             border-radius: 0.5rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -584,7 +584,7 @@
             font-size: 9px;
             color: #838383;
             background: #fffffff1;
-            border: 0.15rem solid #af1047;
+            border: 0.15rem solid #f1d4de;
             border-radius: 0.5rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -647,7 +647,7 @@
             font-family: 'Poppins';
             font-size: 1.5rem;
             color: #808080;
-            border: 0.15rem solid #af1047;
+            border: 0.15rem solid #f1d4de;
             border-radius: 0.5rem;
             background: #fffffff1;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -701,7 +701,7 @@
             height: 270px;
             background: transparent;
             margin-top: 0.7rem;
-            border: 0.15rem solid #af1047;
+            border: 0.15rem solid #f1d4de;
             border-radius: 0.5rem;
           }
 
@@ -837,7 +837,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #af1047;
+      border: 0.15rem solid #f1d4de;
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -865,7 +865,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #af1047;
+      border: 0.15rem solid #f1d4de;
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -912,7 +912,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             height: 420px;
             padding: 20px;
             background: #fffffff1;
-            border: 0.15rem solid #af1047;
+            border: 0.15rem solid #f1d4de;
             margin-top: 7px;
             border-radius: 0.5rem;
           }
@@ -1152,7 +1152,7 @@ cursor: pointer;
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #af1047;
+      border: 0.15rem solid #f1d4de;
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -1204,7 +1204,7 @@ cursor: pointer;
             background: #fffffff1;
             padding: 10px;
             margin-top: -1px;
-            border: 0.15rem solid #af1047;
+            border: 0.15rem solid #f1d4de;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             border-radius: 0.5rem;
           }
@@ -1277,7 +1277,7 @@ font-size: 14px;
   padding: 10px;
   background: #fffffff1;
   margin-top: 5.5rem;
-  border: 0.15rem solid #af1047;
+  border: 0.15rem solid #f1d4de;
   box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             border-radius: 0.5rem;
             cursor: pointer;
@@ -1384,7 +1384,7 @@ font-size: 20px;
       align-items: center;
       width: 84.04%;
       height: 100px;
-      border: 0.15rem solid #af1047;
+      border: 0.15rem solid #f1d4de;
       color: #8e8e8e;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -1428,7 +1428,7 @@ font-size: 20px;
             width: 86.7%;
             height: 460px;
             background: #fffffff1;
-            border: 0.15rem solid #af1047;
+            border: 0.15rem solid #f1d4de;
             border-radius: 0.5rem;
             margin-top: 9px;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
