--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 border-bottom: 0.5rem solid #84133b;
+                 border-bottom: 0.5rem solid #1b6fc8;
           }
           
           .myDiv{
@@ -701,7 +701,7 @@
             height: 270px;
             background: transparent;
             margin-top: 0.7rem;
-            border: 0.15rem solid #f1d4de;
+            border: 0.15rem solid #f8c3d5;
             border-radius: 0.5rem;
           }
 
