--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background-color: rgba(235, 235, 235, 0.986);
+        background-color: rgba(233, 233, 233, 0.972);
     }
 
     .content1{
@@ -1412,7 +1412,7 @@ font-size: 20px;
             justify-content: center;
             justify-items: center;
             width: 100%;
-            height: 500px;
+            height: 520px;
             background: transparent;
             padding: 20px;
             color: #000;
@@ -1426,7 +1426,7 @@ font-size: 20px;
             justify-items: center;
             padding: 10px;
             width: 86.7%;
-            height: 460px;
+            height: 480px;
             background: #fffffff1;
             border: 0.15rem solid #f1d4de;
             border-radius: 0.5rem;
@@ -2529,7 +2529,10 @@ font-size: 14px;
               <div class="FoodSecurity">
 
                 <div class="FST">
+                <figure>
                   <img src="https://www.zupimages.net/up/22/42/mh4v.jpg" alt="Cooked Pasta">
+                  <figcaption style="font-size: 16px; text-align: left; color: #9e0e40">A cooked Pasta</figcaption>
+                </figure>
                 </div>
 
                 <div class="FSTS">
@@ -2596,8 +2599,12 @@ font-size: 14px;
               <div class="F1">
 
               <div class="footer1">
+                <figure>
                 <img src="https://zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
+                <figcaption style="font-size: 17px; text-align: left;">A mushroom in Ahuntsic</figcaption>
+                </figure>
               </div>
+            
               <div class="F2">
                 Mushrooms are part of special plants that are both comestible and poisonous depending the kind of mushroom we are dealing with. But human-being has managed to introduce mushrooms into his culinary culure (art) making some of them as food and then useful
             </div>
