--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@ font-size: 20px;
       background: #fffffff1;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
-      margin-top: 0.25rem;
+      margin-top: 2.5rem;
     
           }
 
@@ -2508,7 +2508,10 @@ font-size: 14px;
                     </div>
                   </div>
                   <div class="H-P-H">
+                  <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
+                    <figcaption style="font-size: 16px; text-align: left; color: #9e0e40">A Multicolored Flower exposed to summer shining</figcaption>
+                </figure>
                   </div>
 
                 </div>
