--- a/index.html
+++ b/index.html
@@ -1537,10 +1537,10 @@ font-size: 14px;
           grid-template-columns: 1fr 1fr;
           justify-content: space-between;
           justify-items: center;
-          width: 86%;
-          height: auto;
+          width: 85.45%;
+          height: 340px;
           background: #9e0e40;
-          padding: 10px;
+          padding: 13px;
           border-radius: 0.15rem;
           border: 0.15rem solid #fc2b74f6;
           font-size: 2.2rem;
