--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background-color: rgba(233, 233, 233, 0.972);
+        background-color: rgba(222, 222, 222, 0.981);
     }
 
     .content1{
@@ -701,7 +701,7 @@
             height: 270px;
             background: transparent;
             margin-top: 0.7rem;
-            border: 0.15rem solid #f8c3d5;
+            border: 0.15rem solid #f8b3cafc;
             border-radius: 0.5rem;
           }
 
