--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
             font-size: 9px;
             color: #838383;
             background: #fffffff1;
-            border: 0.15rem solid #f1d4de;
+            border: 0.15rem solid rgba(222, 222, 222, 0.981);
             border-radius: 0.5rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -584,7 +584,7 @@
             font-size: 9px;
             color: #838383;
             background: #fffffff1;
-            border: 0.15rem solid #f1d4de;
+            border: 0.15rem solid rgba(222, 222, 222, 0.981);
             border-radius: 0.5rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -647,7 +647,7 @@
             font-family: 'Poppins';
             font-size: 1.5rem;
             color: #808080;
-            border: 0.15rem solid #f1d4de;
+            border: 0.15rem solid rgba(222, 222, 222, 0.981);
             border-radius: 0.5rem;
             background: #fffffff1;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
@@ -697,19 +697,19 @@
             justify-content: space-around;
             justify-items: center;
             padding: 0.3rem;
-            width: 85.5%;
+            width: 85.65%;
             height: 270px;
-            background: transparent;
+            background: rgba(167, 167, 167, 0.755);
             margin-top: 0.7rem;
-            border: 0.15rem solid #f8b3cafc;
-            border-radius: 0.5rem;
+            border: 0.15rem solid rgba(2, 163, 221, 0.835);
+            border-radius: 0.65rem;
           }
 
           .Kontent:hover{
             border: 0.15rem solid #000;
-            transition: 0.33s linear;
-            background: yellow;
-            border-radius: 0.5rem;
+            transition: 0.3s linear;
+            background: gold;
+            border-radius: 0.65rem;
           }
 
           .Kontent1{
@@ -728,7 +728,7 @@ font-size: 16px;
 color: #6b6b6b;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
+box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
 
           }
 
@@ -790,7 +790,7 @@ font-size: 16px;
 color: #6b6b6b;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
+box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
           }
 
 .Kontent2:hover{
@@ -819,7 +819,7 @@ font-size: 16px;
 color: #6b6b6b;
 cursor: pointer;
 margin-top: 0.35rem;
-box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
+box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
           }
 
           .Kontent3:hover{
@@ -837,7 +837,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       align-items: center;
       width: 86%;
       height: 100px;
-      border: 0.15rem solid #f1d4de;
+      border: 0.15rem solid rgba(222, 222, 222, 0.981);
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -865,7 +865,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #f1d4de;
+      border: 0.15rem solid rgba(222, 222, 222, 0.981);
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -912,7 +912,7 @@ box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             height: 420px;
             padding: 20px;
             background: #fffffff1;
-            border: 0.15rem solid #f1d4de;
+            border: 0.15rem solid rgba(222, 222, 222, 0.981);
             margin-top: 7px;
             border-radius: 0.5rem;
           }
@@ -1152,7 +1152,7 @@ cursor: pointer;
       align-items: center;
       width: 84.05%;
       height: 100px;
-      border: 0.15rem solid #f1d4de;
+      border: 0.15rem solid rgba(222, 222, 222, 0.981);
       color: #8c8c8c;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -1204,7 +1204,7 @@ cursor: pointer;
             background: #fffffff1;
             padding: 10px;
             margin-top: -1px;
-            border: 0.15rem solid #f1d4de;
+            border: 0.15rem solid rgba(222, 222, 222, 0.981);
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             border-radius: 0.5rem;
           }
@@ -1277,7 +1277,7 @@ font-size: 14px;
   padding: 10px;
   background: #fffffff1;
   margin-top: 5.5rem;
-  border: 0.15rem solid #f1d4de;
+  border: 0.15rem solid rgba(222, 222, 222, 0.981);
   box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             border-radius: 0.5rem;
             cursor: pointer;
@@ -1384,7 +1384,7 @@ font-size: 20px;
       align-items: center;
       width: 84.04%;
       height: 100px;
-      border: 0.15rem solid #f1d4de;
+      border: 0.15rem solid rgba(222, 222, 222, 0.981);
       color: #8e8e8e;
       font-family: 'Poppins';
       font-size: 2rem;
@@ -1428,7 +1428,7 @@ font-size: 20px;
             width: 86.7%;
             height: 480px;
             background: #fffffff1;
-            border: 0.15rem solid #f1d4de;
+            border: 0.15rem solid rgba(222, 222, 222, 0.981);
             border-radius: 0.5rem;
             margin-top: 9px;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
