--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -149,6 +149,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
+                 border-bottom: 0.5rem solid rgb(163, 163, 163);
           }
           
           .myDiv{
@@ -379,7 +380,7 @@
       align-items: center;
       width: 100%;
       height: 66px;
-      background: #fff;  
+      background: #fafafa;  
       color: darkblue;
       font-family: 'Poppins';
       font-size: 1.5rem;
