--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background-color: rgba(216, 216, 216, 0.937);
+        background-color: rgba(219, 218, 218, 0.925);
     }
 
     .content1{
@@ -699,9 +699,9 @@
             padding: 0.3rem;
             width: 85.65%;
             height: 270px;
-            background: rgba(167, 167, 167, 0.755);
+            background: rgba(171, 171, 171, 0.755);
             margin-top: 0.7rem;
-            border: 0.15rem solid rgba(4, 157, 213, 0.868);
+            border: 0.15rem solid rgba(2, 161, 219, 0.908);
             border-radius: 0.65rem;
           }
 
@@ -1420,9 +1420,8 @@ font-size: 20px;
 
           .FoodSecurity{
             display: grid;
-            grid-template-columns: 1.25fr 1fr;
-            column-gap: 0.2rem;
-            justify-content: space-around;
+            grid-template-columns: 1fr 1fr;
+            justify-content: center;
             justify-items: center;
             padding: 10px;
             width: 86.7%;
@@ -1438,8 +1437,8 @@ font-size: 20px;
 }
 
     .FST img{ 
-      width: 650px;
-      height: 430px;
+      width: 450px;
+      height: 400px;
       padding: 2px;
       cursor: pointer;
     }
@@ -1450,14 +1449,16 @@ font-size: 20px;
     }
 
     .FSTS{
-      width: 64.5%;
-      height: 427px;
+      width: 350px;
+      height: 400px;
       color: #787878fa;
       padding: 10px;
       font-family: georgia;
-      font-size: 1.15rem;
-      line-height: 22px;
+      font-size: 1.25rem;
+      line-height: 36px;
       cursor: pointer;
+      margin-top: 10px;
+      border-radius: 0.5rem;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
     }
 
@@ -1467,8 +1468,8 @@ font-size: 20px;
 
 .FooD{
   font-family: georgia;
-  font-size: 20px;
-line-height: 24px;
+  font-size: 22px;
+  line-height: 30px;
 }
 
 .SF{
@@ -2511,7 +2512,9 @@ font-size: 14px;
                   <div class="H-P-H">
                   <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
-                    <figcaption style="font-size: 16px; text-align: left; color: #9e0e40">A Multicolored Flower exposed to summer shining</figcaption>
+                    <figcaption style="font-size: 16px; text-align: left; color: #9e0e40">
+                      A Multicolored Flower Shining to Summer
+                    </figcaption>
                 </figure>
                   </div>
 
@@ -2533,16 +2536,18 @@ font-size: 14px;
               <div class="FoodSecurity">
 
                 <div class="FST">
-                <figure>
-                  <img src="https://www.zupimages.net/up/22/42/mh4v.jpg" alt="Cooked Pasta">
-                  <figcaption style="font-size: 16px; text-align: left; color: #9e0e40">A cooked Pasta</figcaption>
-                </figure>
-                </div>
+                  <figure>
+                    <img src="https://cdn-icons-png.flaticon.com/512/4762/4762089.png" alt="Food Security">
+                        <figcaption style="color: #9e0e40; font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
+                        </figcaption>
+                    </figure>
+
+                  </div>
 
                 <div class="FSTS">
 
                   <div class="FooD">
-                  While in some regions around the world people have no more to worry about Food Safety, in some other ones, it is not the same reality. There are ceaseless worries in terms of having daily bread [Food]. Some people have to struggle hard to get it. In worse cases, some have died or are dying. But No Food Safety, No Sustainable Development. 
+                  While in some regions around the world people have no more worries about Food Safety, in some other regions, it is not the same reality. Some people are struggling hard to get their daily food. In worse cases, some have died or are dying. But No Food Safety, No Sustainable Development. 
                 </div>
 
                 <div class="SF">
