--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
         justify-content: center;
         justify-items: center;
             width: 100%;
-            height: 460px;
-            background: #000;
+            height: 470px;
+            background: #0b0b0b;
     }
 
     .KonTenT0{
@@ -470,17 +470,16 @@
         justify-content: center;
         justify-items: center;
             width: 84%;
-            height: 380px;
-            background: #000;
-            padding: 37px;
-            color: rgb(226, 171, 33);
-            font-size: 2.47rem;
-            line-height: 47px;
-            font-family: 'Poppins';
-            border: 0.2rem solid rgb(226, 171, 33);
+            height: 390px;
+            background: #0c0c0ced;
+            padding: 25px;
+            color: rgba(220, 167, 32, 0.963);
+            font-size: 1.37rem;
+            line-height: 36.5px;
+            font-family: 'georgia';
             border-radius: 0.5rem;
-            text-align: left;
-            margin-top: 2.45rem;
+            text-align: justify;
+            margin-top: 2rem;
     }
 
     .content1{
@@ -2283,10 +2282,10 @@ font-size: 14px;
             <div class="content0"> 
 
               <div class="KonTenT0">  
-                <b style="text-align: center;">Welcome on Tiki N'Yiki's Website !</b> 
+                <b style="text-align: center; font-size: 1.73rem;">Welcome on Tiki N'Yiki's Website !</b> 
               <br>
-              <br>
-                This website is dedicated to improve education, promote inclusion about DISABLED PEOPLE especially DISABLED CHILDREN and their social lives in Burkina Faso.  It's a great pleasure to having you online and wanting to learn what is about realities of being and living as a disabled person. Thank you for time !
+              This website is dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay in including and defending disabled people in the society if needed. <b style="align-items: center;">Thank you for your time and feedback !
+
             </div>
 
           </div>
@@ -2560,7 +2559,7 @@ font-size: 14px;
 
                 </div>
 
-                <div class="HP-HP" style="margin-left: 12rem; font-size: 0.9rem; background: #07070746; padding: 5px; color: #fff; height: 30px">
+                <div class="HP-HP" style="margin-left: 18rem; font-size: 0.9rem; background: #07070746; padding: 5px; color: #fff; height: 30px">
                  What is about the healing power of flowers in phytotherapy?
                 </div>
             </div>
