--- a/index.html
+++ b/index.html
@@ -470,14 +470,15 @@
         justify-content: center;
         justify-items: center;
             width: 84%;
-            height: 380px;
-            background: #222222f3;
+            height: 375px;
+            background: #1b1b1bd3;
             padding: 25px;
-            color: #828282f2;
+            color: #878686f2;
             font-size: 1.37rem;
             line-height: 36.5px;
             font-family: 'georgia';
-            border-radius: 5rem;
+            border-top-right-radius: 3rem;
+            border-top-left-radius: 3rem;
             text-align: justify;
             margin-top: 2.2rem;
     }
@@ -1234,7 +1235,7 @@ cursor: pointer;
             justify-content: center;
             justify-items: center;
             width: 85.2%;
-            height: 150px;
+            height: 151px;
             background: #9e0e40;
             padding: 10px;
             margin-top: -1px;
