--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
         justify-content: center;
         justify-items: center;
             width: 100%;
-            height: 470px;
+            height: 465px;
             background: #2c2c2c;
     }
 
@@ -471,16 +471,16 @@
         justify-items: center;
             width: 84%;
             height: 375px;
-            background: #1b1b1bd3;
+            background: #181818d2;
             padding: 25px;
-            color: #878686f2;
+            color: #848383ec;
             font-size: 1.37rem;
             line-height: 36.5px;
             font-family: 'georgia';
-            border-top-right-radius: 3rem;
-            border-top-left-radius: 3rem;
+            border: 0.12rem solid #4c4c4cdc;
+            border-radius: 1.7rem;
             text-align: justify;
-            margin-top: 2.2rem;
+            margin-top: 2.4rem;
     }
 
     .content1{
@@ -2573,7 +2573,7 @@ font-size: 14px;
                   <div class="H-P-H">
                   <figure>
                     <img src="https://www.zupimages.net/up/22/27/zf4p.jpg" alt="Red Flower">
-                    <figcaption style="font-size: 16px; text-align: left; color: #9e0e40">
+                    <figcaption style="font-size: 16px; text-align: left; color: #d6d5d5d9;">
                       A Multicolored Flower Shining to Summer
                     </figcaption>
                 </figure>
@@ -2599,7 +2599,7 @@ font-size: 14px;
                 <div class="FST">
                   <figure>
                     <img src="https://cdn-icons-png.flaticon.com/512/4762/4762089.png" alt="Food Security">
-                        <figcaption style="color: #9e0e40; font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
+                        <figcaption style="color: #d6d5d5c1; font-size: 15px; font-family: georgia; margin-top: 5px">Some people are throwing food in the trash and others are starving
                         </figcaption>
                     </figure>
 
