--- a/index.html
+++ b/index.html
@@ -524,8 +524,8 @@
             font-size: 9px;
             color: #fefdfded;
             background: #9e0e40;
-            border: 0.15rem solid #ff4686fb;
-            border-radius: 0.5rem;
+            border: 0.15rem solid #000;
+            border-radius: 0.15rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
@@ -614,8 +614,8 @@
             font-size: 9px;
             color: #fefdfded;
             background: #9e0e40;
-            border: 0.15rem solid #ff4686fb;
-            border-radius: 0.5rem;
+            border: 0.15rem solid #000;
+            border-radius: 0.15rem;
             cursor: pointer;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
@@ -678,8 +678,8 @@
             font-size: 1.22rem;
             color: #808080;
             background: #9e0e40;
-            border: 0.15rem solid #ff4686fb;
-            border-radius: 0.5rem;
+            border: 0.15rem solid #000;
+            border-radius: 0.15rem;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
             margin-top: -7px;
           }
@@ -730,9 +730,10 @@
             width: 86%;
             height: 270px;
             background: #b8104b;
-            border: 0.15rem solid #ff4686fb;
+            border: 0.15rem solid #000;
             margin-top: 0.7rem;
-            border-radius: 0.65rem;
+            border-radius: 0.15rem;
+            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 
           .Kontent:hover{
@@ -753,7 +754,7 @@ padding: 10px;
 color: #fefdfded;
 background: #9e0e40;
 border: 0.15rem solid #ff4686fb;
-border-radius: 1rem;
+border-radius: 0.15rem;
 font-family: 'georgia';
 font-size: 7px;
 line-height: 15px;
@@ -871,16 +872,16 @@ box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
       width: 86%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #ff4686fb;
+      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
-      border-radius: 0.5rem;
+      border-radius: 0.15rem;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
-      margin-top: 1rem;
+      margin-top: 0.85rem;
           }
 
           .navbar2:hover{
@@ -899,16 +900,16 @@ box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
       width: 84.05%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #ff4686fb;
+      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
-      border-radius: 0.5rem;
+      border-radius: 0.15rem;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
-      margin-top: 1rem;
+      margin-top: 0.8rem;
           }
 
           .navbar3:hover{
@@ -945,9 +946,10 @@ box-shadow: 0 0 0.5rem 0.5px rgba(207, 207, 207, 0.67);
             height: 420px;
             padding: 20px;
             background: #9e0e40;
-            border: 0.15rem solid #ff4686fb;
+            border: 0.15rem solid #000;
             margin-top: 7px;
-            border-radius: 0.5rem;
+            border-radius: 0.15rem;
+            box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
 
           .DiapoWrapper:hover{
@@ -1188,13 +1190,13 @@ cursor: pointer;
       width: 84.05%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #ff4686fb;
+      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
-      border-radius: 0.5rem;
+      border-radius: 0.15rem;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
       margin-top: 1.27rem;
@@ -1238,10 +1240,10 @@ cursor: pointer;
             height: 151px;
             background: #9e0e40;
             padding: 10px;
-            margin-top: -1px;
-            border: 0.15rem solid #ff4686fb;
+            margin-top: 1px;
+            border: 0.15rem solid #000;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
-            border-radius: 0.5rem;
+            border-radius: 0.15rem;
           }
           .H-P:hover{
             border: 0.15rem solid #000;
@@ -1312,9 +1314,9 @@ font-size: 14px;
   padding: 10px;
   background: #9e0e40;
   margin-top: 5.5rem;
-  border: 0.15rem solid #ff4686fb;
+  border: 0.15rem solid #000;
   box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
-            border-radius: 0.5rem;
+  border-radius: 0.15rem;
             cursor: pointer;
 }
 
@@ -1426,13 +1428,13 @@ font-size: 20px;
       width: 84.04%;
       height: 100px;
       background: #9e0e40;
-      border: 0.15rem solid #ff4686fb;
+      border: 0.15rem solid #000;
       color: #e9e9e9a7;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
-      border-radius: 0.5rem;
+      border-radius: 0.15rem;
       box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
       cursor: pointer;
       margin-top: 2.5rem;
@@ -1468,8 +1470,8 @@ font-size: 20px;
             width: 86.7%;
             height: 480px;
             background: #9e0e40;
-            border: 0.15rem solid #ff4686fb;
-            border-radius: 0.5rem;
+            border: 0.15rem solid #000;
+            border-radius: 0.15rem;
             margin-top: 9px;
             box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
           }
@@ -1595,8 +1597,9 @@ font-size: 14px;
           background: #9e0e40;
           padding: 13px;
           border-radius: 0.15rem;
-          border: 0.15rem solid #fc2b74f6;
+          border: 0.15rem solid #000;
           font-size: 2.2rem;
+          box-shadow: 0 0 0.2rem -0.25px rgba(182, 218, 215, 0.67);
         }
 .footer1 img{
    width: 400px;
@@ -1607,11 +1610,11 @@ font-size: 14px;
   display: grid;
   grid-template-columns: 1fr;
   font-family: 'Poppins';
-  font-size: 2rem;
-  line-height: 36px;
+  font-size: 1.96rem;
+  line-height: 34px;
   text-align: justify;
   padding: 20px;
-  color: #fdfdfd;
+  color: #d4d4d4f3;
 }
 
 .footer2{
@@ -1620,8 +1623,8 @@ font-size: 14px;
   justify-items: center;
   width: 100%;
   height: auto;
-  font-family: 'Poppins';
-  font-size: 16px;
+  font-family: 'georgia';
+  font-size: 14px;
 }
     .content a:hover{
         text-decoration: underline;
@@ -2308,7 +2311,7 @@ font-size: 14px;
               <div class="KonTenT0">  
                 <b style="text-align: center; font-size: 1.73rem;">Welcome on Tiki N'Yiki's Website !</b> 
               <br>
-              This website is dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay in including and defending disabled people in the society if needed. <b style="align-items: center;">Thank you for your time and feedback !
+              This website is in project. It will be dedicated to improve education, promote inclusion and protect rights of disabled people. Tiki N'Yiki through its Vision, focuses especially on DISABLED CHILDREN, their INCLUSION and EDUCATION in Burkina Faso in order to HELP them DREAM. One of the main leverages of dreaming is fundamentally getting EDUCATED. It is not onely a great pleasure to having you here and wanting to learn more about realities of being, living as a disabled person and what is the Vision of Tiki N'Yiki but also and hopefully you'll be a relay in including and defending disabled people in the society if needed. <b style="align-items: center;">Thank you for your time and feedback !
 
             </div>
 
@@ -2681,9 +2684,7 @@ font-size: 14px;
           </div>
 
               <div class="footer2">
-                <br>
                 [Copyright © Tiki N'Yiki 2023] 
-                <br>
                 <br> 
                 [Webmaster : GKC => | Disability Rights Advocate | Photography Passionate]
                 <br>
